src/objects/SAP_Customer__c.object
<CustomObject>
    <description>Holds SAP Sold To and Ship information for the Rebate and Channel Map objects.</description>
    <fields>
        <fullName>Account_Rep_Code__c</fullName>
        <label>Account Rep Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rep_Desc__c</fullName>
        <label>Account Rep Desc.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACC_Description__c</fullName>
        <label>CACC Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACC__c</fullName>
        <label>CACC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Sales Channel</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funloc__c</fullName>
        <description>SAP Funloc Number</description>
        <label>Funloc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account__c</fullName>
        <label>Global Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Description__c</fullName>
        <formula>CASE (Group__c,
&quot;Z001&quot;,&quot;Sold/Ship/Bill-to/Payer&quot;,
&quot;Z002&quot;,&quot;Ship-to party&quot;,
&quot;Z003&quot;,&quot;Payer&quot;,
&quot;Z004&quot;,&quot;Bill-to party&quot;,
&quot;Z005&quot;,&quot;Sold-to/Bill-to/Payer&quot;,
&quot;Z007&quot;,&quot;Ship-to Digikey sample sale&quot;,
&quot;Z010&quot;,&quot;Intermediate Consignee&quot;,
&quot;Z011&quot;,&quot;Sold-to party&quot;,
&quot;Z012&quot;,&quot;Sold-to/Ship-to&quot;,
&quot;Z013&quot;,&quot;Payer/Bill-to party&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Code_SH__c</fullName>
        <label>Incoterms Code SH</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Name_SH__c</fullName>
        <label>Incoterms Name SH</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Description__c</fullName>
        <label>Market Segment Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1__c</fullName>
        <label>Name 1</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2__c</fullName>
        <label>Name 2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3__c</fullName>
        <label>Name 3</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <label>Ship To Party</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/ Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Key for upload.  Key is concatenation of 
&quot;Sold To&quot;
&quot;-&quot;
&quot;Ship To&quot;
&quot;-&quot;
&quot;SOrg&quot;</description>
        <externalId>true</externalId>
        <label>Unique-Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SAP Customer</label>
    <listViews>
        <fullName>All_Customers</fullName>
        <columns>Group__c</columns>
        <columns>Funloc__c</columns>
        <columns>NAME</columns>
        <columns>CACC__c</columns>
        <columns>CACC_Description__c</columns>
        <columns>Global_Account__c</columns>
        <columns>Unique_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>Specific_Customer_Funloc</fullName>
        <columns>Funloc__c</columns>
        <columns>NAME</columns>
        <columns>CACC__c</columns>
        <columns>CACC_Description__c</columns>
        <columns>Global_Account__c</columns>
        <columns>Unique_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Funloc__c</field>
            <operation>equals</operation>
            <value>452729</value>
        </filters>
        <label>Specific Customer Funloc</label>
    </listViews>
    <nameField>
        <label>SAP Customer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>